# research-agents-smma

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cicd.yaml
config/: agents.yaml  tasks.yaml
helpers/: execute_task_async.py  format_news_for_email.py  is_valid_email.py  send_email_ses.py
prompts/: analyst_task_description_tmplt.py  research_task_description_tmplt.py
pydantic_types/: final_output.py  news_results.py  results.py
scripts/: build_set_secrets_string.sh  generate_service_account.sh  upload_secrets.sh
tools/: custom_scrape_website.py  url_qa.py
